Fixing scroll performance on mobile

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -77,6 +77,7 @@
     .header {
         width: 110vw;
         top: -110px;
+        filter: unset;
     }
 
     .navLinks {
